# mpeg7fex

./: CMakeLists.txt  HowToCompile.txt  README.md  build.sh
test/: FexWrite.cpp  FexWrite.h  main.cpp
